--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
 
 header {
     width: 100%;
-    height: 218px;
+    height: 120px;
     position: fixed;
     top: 0;
     z-index: 10;
@@ -181,7 +181,7 @@ main {
 }
 
 .hero__button {
-    font-size: 15px;
+    font-size: 17px;
     font-family: 'Mulish', sans-serif;
     font-weight: 700;
     line-height: 52px;
@@ -260,6 +260,32 @@ main {
     left: 503px;
 }
 
+.info2__element1 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 2312px;
+    left: 45px;
+}
+
+.info2__element2 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 2622px;
+    left: 416px;
+    transform: rotate(20deg);
+}
+
+.info2__element3 {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 2220px;
+    left: 1187px;
+    transform: rotate(20deg);
+}
+
 /* Info */
 
 .info {
@@ -312,6 +338,7 @@ main {
     color: #FFFFFF;
     background-color: #FB8F1D;
     border-radius: 8px;
+    text-decoration: none;
 }
 
 /* DESTINATIONS */
@@ -388,7 +415,131 @@ main {
     color: #80918E;
 }
 
+/* INFO 2 */
 
+.info2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 178px;
+
+}
+
+.info2__content{
+    width: 39%;
+}
+
+.info2__title {
+    font-size: 36px;
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    line-height: 50px;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+.info2__text {
+    font-size: 17px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 300;
+    line-height: 30px;
+    color: #7D7987;
+    margin-bottom: 39px;
+}
+
+.info2__button {
+    display: block;
+    width: 164px;
+    height: 48px;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    line-height: 48px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #FB8F1D;
+    border-radius: 8px;
+    text-decoration: none;
+}
+
+.info2__img-container {
+    width: 50%;
+}
+
+.info2__img {
+    width: 549px;
+    height: 497px;
+}
+
+/* TESTIMONIAL */
+
+.testimonial {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.testimonial__content {
+    width: 57%;
+}
+
+.testimonial__title {
+    font-size: 36px;
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    line-height: 36px;
+    color: #000000;
+    margin-bottom: 54px;
+}
+
+.testimonial__score-img {
+    width: 25px;
+    height: 25px;
+}
+
+.testimonial__score {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 189px;
+    margin-bottom: 30px;
+}
+
+.testimonial__text {
+    font-size: 24px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 400;
+    line-height: 36px;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+.testimonial__author {
+    font-size: 22px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    line-height: 48px;
+    color: #000000;
+}
+
+.testimonial__author-job {
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    line-height: 48px;
+    color: #000000;
+}
+
+.testimonial__container-img {
+    width: 34%;
+}
+
+.testimonial__img {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+}
 
 
 
