--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ header {
     align-items: center;
 }
 
-.header__images {
+.logo {
     position: relative;
 }
 
@@ -129,6 +129,7 @@ main {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 290px;
+    position: relative;
 }
 
 .hero__content {
@@ -202,8 +203,6 @@ main {
     height: 527px;
 }
 
-/* ELEMENTS */
-
 .hero__element1 {
     width: 20px;
     height: 20px;
@@ -228,90 +227,6 @@ main {
     left: 491px;
 }
 
-.info__element1 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 782px;
-    left: 604px;
-}
-
-.info__element2 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 1100px;
-    left: 984px;
-}
-
-.destinations__element1 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 1510px;
-    left: 930px;
-}
-
-.destinations__element2 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 2022px;
-    left: 503px;
-}
-
-.info2__element1 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 2312px;
-    left: 45px;
-}
-
-.info2__element2 {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 2622px;
-    left: 416px;
-    transform: rotate(20deg);
-}
-
-.info2__element3 {
-    width: 16px;
-    height: 16px;
-    position: absolute;
-    top: 2220px;
-    left: 1187px;
-    transform: rotate(20deg);
-}
-
-.testimonials__element1 {
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    top: 3097px;
-    left: -112px;
-}
-
-.testimonials__element2 {
-    width: 31px;
-    height: 31px;
-    position: absolute;
-    top: 3404px;
-    left: 731px;
-    transform: rotate(8deg);
-}
-
-.testimonials__element3 {
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    top: 2912px;
-    left: 1110px;
-    transform: rotate(8deg);
-}
-
 /* Info */
 
 .info {
@@ -319,6 +234,7 @@ main {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 213px;
+    position: relative;
 }
 
 .info__img-container {
@@ -365,6 +281,22 @@ main {
     background-color: #FB8F1D;
     border-radius: 8px;
     text-decoration: none;
+}
+
+.info__element1 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -87px;
+    left: 558px;
+}
+
+.info__element2 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 235px;
+    left: 973px;
 }
 
 /* DESTINATIONS */
@@ -441,6 +373,31 @@ main {
     color: #80918E;
 }
 
+.destinations__element1 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 294px;
+    left: -96px;
+}
+
+.destinations__element2 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    bottom: -76px;
+    left: 508px;
+}
+
+.destinations__element3 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -41px;
+    left: 929px;
+}
+
+
 /* INFO 2 */
 
 .info2 {
@@ -449,6 +406,7 @@ main {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 178px;
+    position: relative;
 
 }
 
@@ -498,6 +456,32 @@ main {
     height: 497px;
 }
 
+.info2__element1 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 25px;
+    left: 42px;
+}
+
+.info2__element2 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 377px;
+    left: 416px;
+    transform: rotate(20deg);
+}
+
+.info2__element3 {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: -14px;
+    right: -67px;
+    transform: rotate(20deg);
+}
+
 /* TESTIMONIAL */
 
 .testimonial {
@@ -506,6 +490,7 @@ main {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 267px;
+    position: relative;
 }
 
 .testimonial__content {
@@ -568,13 +553,41 @@ main {
     border-radius: 8px;
 }
 
+.testimonials__element1 {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 179px;
+    left: -124px;
+}
+
+.testimonials__element2 {
+    width: 31px;
+    height: 31px;
+    position: absolute;
+    top: 487px;
+    left: 688px;
+    transform: rotate(8deg);
+}
+
+.testimonials__element3 {
+    width: 42px;
+    height: 42px;
+    position: absolute;
+    top: 1px;
+    right: 19px;
+}
+
 /* STORIES */
+
+.stories {
+    position: relative;
+}
 
 .stories__intro {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 50px;
 }
 
 .stories__title {
@@ -585,7 +598,7 @@ main {
     color: #000000;
 }
 
-.stories__view-all{
+.stories__view-all {
     font-size: 17px;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
@@ -598,50 +611,171 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 50px;
 }
 
 .stories__card {
-    position: relative;
-    width: calc(25% - 20px);
+    width: calc(25% - 10px);
+    padding-top: 26px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 26px;
+    height: 831px;
 }
 
 .stories__img {
     border-radius: 8px;
-    width: 99%;
 }
 
 .stories__id {
-    background-color: #FFFFFF;
     padding-top: 13px;
-    padding-right: 42px;
-    padding-bottom: 5px;
     position: absolute;
-    top: 224px;
-    width: 100%;
+    width:calc(25% - 17px);
+    top: 312px;
+    background-color: #FFF;
 }
 
 .stories__id-title {
-    font-size: 17px;
+    font-size: 19px;
     font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    line-height: 25px;
+    font-weight: 700;
+    line-height: 30px;
     color: #042521;
-    margin-bottom: 15px;
+    margin-bottom: 13px;
 }
 
 .stories__id-text {
     font-size: 15px;
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    line-height: 24px;
-    color: #80918E;
-    margin-bottom: 15px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7D7987;
+    margin-bottom: 23px;
 }
 
 .stories__link {
-
+    font-size: 15px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    line-height: 28px;
+    color: #FB8F1D;
 }
+
+
+.stories__element1 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 362px;
+    left: -99px;
+}
+
+.stories__element2 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -34px;
+    left: 417px;
+}
+
+.stories__element3 {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 578px;
+    left: 740px;
+}
+
+
+
+/* FOOTER */
+
+footer {
+    background-color: #F9F9FB;
+    position: relative;
+    height: 452px;
+}
+
+.footer__content {
+    width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 70px;
+    padding-bottom: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer__content-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-bottom: 1px solid #C4C4C4;
+}
+
+.about {
+    width: 34%;
+    margin-bottom: 59px;
+}
+
+.about__text {
+    font-size: 18px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 300;
+    line-height: 28px;
+    color: #848484;
+    margin-top: 26px;
+}
+
+.about__rights {
+    font-size: 17px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 300;
+    line-height: 28px;
+    color: #848484;
+    margin-top: 55px;
+}
+
+.about-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 53%;
+}
+
+.about-title {
+    font-size: 19px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 700;
+    line-height: 60px;
+    color: #000000;
+}
+
+.about-item {
+    font-size: 18px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: 300;
+    line-height: 38px;
+    color: #848484;
+    text-decoration: none;
+    display: block;
+}
+
+.footer__content-social {
+    margin-top: 32px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer__imgs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 248px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 
 
